# abroOS

./: .cursorrules  .env.example  .gitignore  .vercelignore  0G-INTEGRATION.md  CONTRIBUTING.md  LICENSE  README.md  WALLET-README.md  middleware.ts  next.config.js  package-lock.json  package.json  product.md  tailwind.config.ts  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
components/: AboutMeContent.tsx  AssistantGuide.tsx  Background.tsx  Browser.tsx  Calculator.tsx  Calender.tsx  ClientTime.tsx  CodeIndexer.tsx  ContextMenu.tsx  Desktop.backup.tsx  Desktop.tsx  FileExplorer.tsx  FileSystemExplorer.tsx  LoginScreen.tsx  LogoutDialog.tsx  MemoryGame.tsx  MyPCView.tsx  ReadmeContent.tsx  StartMenu.tsx  SystemDashboard.tsx  Taskbar.tsx  TaskbarClock.tsx  TextEditor.tsx  VantaBackground.tsx  WeatherApp.tsx  Window.backup.tsx  Window.tsx  ZKHumanTypingEditor.tsx  ZKProofService.tsx  ZKTypingProofModal.tsx  ZeroGFiles.tsx  icons.tsx
contexts/: AIModelContext.tsx  FileSystemContext.tsx  WalletContext.tsx  WindowsContext.tsx
enclave-kms/: keystore.json
hooks/: use-wallet-accessor.ts  use-zk-prover.ts  useContextMenu.ts  useDoubleClick.ts  useDownload.ts  useGrid.ts  useIntersectionObserver.ts  useSelection.ts  useUpload.ts  useWindowDrag.ts  useWindowSize.ts
lib/: fileSystem.ts  grid.ts  selection.ts  utils.ts  zk-prover-init.ts
scripts/: build-zk-prover.js  deploy-vercel.js  download-icons.js  test-hardware-tee.js  vercel-build.js
styles/: ContextMenu.module.css  (+1 more)
zk-prover/: Cargo.toml  README.md  build.js
zk-prover/src/: lib.rs
(+159 files in other folders)
