[package]
name = "zk-prover"
version = "0.1.0"
edition = "2021"
description = "Zero-Knowledge Human Typing Prover"

[dependencies]
sha2 = "0.10.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"] 